<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">4puzzleGame</string>
    <string name="title_activity_main">Welcome</string>
    <string name="hi">Welcome</string>
    <string name="btnStart">Begin</string>
    <string name="newGame">New Game</string>
    <string name="score">Score</string>
    <string name="continues">Continues</string>
    <string name="Easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="name_intro">Before we start… What\'s your name?</string>
    <string name="continua">Continue</string>
    <string name="newPlayerName">Your name</string>
    <string name="continuar">Continue</string>
    <string name="puntuacion">Scores</string>
    <string name="nameError">Invalid name</string>

    <string name="stopGameExit">EXIT</string>
    <string name="stopGameRestart">RESTART</string>
    <string name="stopGameContinue">CONTINUE</string>
    <string name="stopGamebackMenu">BACK TO MENU</string>
    <string name="Selectimg">Select picture</string>

    <string name="completePuzzle">Puzzle completed</string>
    <string name="FinishContiune">Continue</string>
    <string name="finishScore">Score</string>
    <string name="finisTime">Time to finish</string>

    <string name="mainChangueName">CHANGE NAME PLAYER</string>
    <string name="btnHelp">HELP</string>
    <string name="menu">Menu</string>
    <string name="recordNew">New record!</string>
    <string name="menuInfo">INFO</string>
    <string name="pointsTotalTitle">YOUR TOTAL POINTS</string>
    <string name="pointsTitleGameList">YOUR BEST GAMES</string>
    <string name="pointsBest">Bests scores</string>
    <string name="totalPuntos">YOUR POINTS</string>
    <string name="lastGame">Last Game</string>
    <string name="GO">GO</string>
    <string name="pictur">PICTUR RANDOM GAME</string>
    <string name="NormalMode">Normal Mode</string>
    <string name="RandomMode">Random Mode</string>
    <string name="options">Sounds Options</string>
    <string name="sound">Active Sound</string>
    <string name="soudMode">Sound Mode</string>
    <string name="typesound">Type sound</string>
    <string name="customsound">custom sound</string>
    <string name="defaultsound">Default Sound</string>
    <string name="btnsound">SOUND</string>
    <string name="txsound">SOUND</string>
    <string name="btnSoundSelect">Select Sound</string>
    <string name="btnOnlineMode">Online</string>
    <string name="titleLogin">Login</string>
    <string name="onlineGame">Online Image to Play</string>
    <string name="loading">Loading</string>
    <string name="noMoreImageOnline">No Images Online</string>
    <string name="LeaderBoard">LeaderBoard</string>
    <string name="scoreonline">Online Score</string>

</resources>