<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_azul"
    tools:context=".lyUi.NamePlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/capaContenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="242dp"
            android:layout_height="322dp"
            android:alpha="0.2"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo4pieces" />

        <TextView
            android:id="@+id/labelNewName"
            style="@style/Theme.4puzzleGame.SimpleText"
            android:layout_width="293dp"
            android:layout_height="73dp"
            android:text="@string/name_intro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.30" />

        <Button
            android:id="@+id/btnStart"
            style="@style/Theme.4puzzleGame.Button"
            android:layout_width="223dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="128dp"
            android:onClick="onClick"
            android:padding="0dp"
            android:scaleX="1"
            android:text="@string/continua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newName" />

        <ImageView
            android:id="@+id/btnMarco"
            android:layout_width="237dp"
            android:layout_height="57dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="128dp"
            android:contentDescription="@string/continua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newName"
            app:srcCompat="@drawable/btn_oscuro" />

        <TextView
            android:id="@+id/errorName"
            style="@style/Theme.4puzzleGame.ErrorText"
            android:layout_width="245dp"
            android:layout_height="33dp"
            android:text="@string/nameError"
            app:layout_constraintBottom_toTopOf="@+id/btnMarco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelNewName"
            app:layout_constraintVertical_bias="0.20"
            android:visibility="invisible"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newName"
            style="@style/Theme.4puzzleGame.inputText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:hint="@string/newPlayerName"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLength="21"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelNewName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>