<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_azul"
    tools:context=".lyUi.FinisGameActivity">

        <ImageView
            android:id="@+id/ivTablero"
            android:layout_width="242dp"
            android:layout_height="322dp"
            android:alpha="0.2"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo4pieces" />

        <View
            android:id="@+id/imageView4"
            android:layout_width="323dp"
            android:layout_height="479dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="344dp"
            android:layout_height="158dp"
            android:fontFamily="@font/mainfont_bold"
            android:text="@string/completePuzzle"
            android:textAlignment="center"
            android:textColor="@color/main_azul"
            android:textSize="55sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.109">

        </TextView>

        <Button
            android:id="@+id/btnContine"
            style="@style/Theme.4puzzleGame.Button"
            android:layout_width="223dp"
            android:layout_height="44dp"
            android:layout_marginTop="540dp"
            android:text="@string/FinishContiune"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnContineMarco"
            android:layout_width="237dp"
            android:layout_height="57dp"
            android:contentDescription="@string/newGame"
            app:layout_constraintBottom_toBottomOf="@+id/btnContine"
            app:layout_constraintEnd_toEndOf="@+id/btnContine"
            app:layout_constraintStart_toStartOf="@+id/btnContine"
            app:layout_constraintTop_toTopOf="@+id/btnContine"
            app:srcCompat="@drawable/btn_oscuro" />

        <TextView
            android:id="@+id/txtScoreFinish"
            android:layout_width="228dp"
            android:layout_height="36dp"
            android:layout_marginTop="356dp"
            android:text="@string/finishScore"
            android:textAlignment="center"
            android:fontFamily="@font/mainfont_bold"
            android:textColor="@color/main_azul"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTimeFinish"
            android:layout_width="228dp"
            android:layout_height="36dp"
            android:layout_marginTop="244dp"
            android:text="@string/finisTime"
            android:fontFamily="@font/mainfont_bold"
            android:textColor="@color/main_azul"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="225dp"
            android:layout_height="46dp"
            android:layout_marginTop="280dp"
            android:fontFamily="@font/mainfont_regular"
            android:text="00:00:00"
            android:textAlignment="center"
            android:textColor="@color/main_azul"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextScore"
            android:layout_width="225dp"
            android:layout_height="49dp"
            android:layout_marginTop="392dp"
            android:fontFamily="@font/mainfont_regular"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/main_azul"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


