<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#255FA9"
    tools:context=".lyUi.stopGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:theme="@style/Theme.4puzzleGame.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#97DBFF">

                <ImageView
                    android:id="@+id/btnExit"
                    android:layout_width="88dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.978"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    app:srcCompat="@drawable/btnclose" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/btnLayoutHelp"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.05">

            <TextView
                android:id="@+id/txtBtnHelp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mainfont_bold"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/btnHelp"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#FAFAFA"
                android:src="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayoutContinuar"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLayoutHelp"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txtBtnContinuar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mainfont_bold"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/stopGameContinue"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#FAFAFA"
                android:src="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayoutReiniciar"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLayoutContinuar"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txtBtnReiniciar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mainfont_bold"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/stopGameRestart"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#FAFAFA"
                android:src="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayoutBack"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLayoutReiniciar"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mainfont_bold"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/stopGamebackMenu"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#FAFAFA"
                android:src="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayoutSalir"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLySound"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txtBtnSalir"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mainfont_bold"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/stopGameExit"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#FAFAFA"
                android:src="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLySound"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLayoutBack"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mainfont_bold"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/txsound"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#FAFAFA"
                android:src="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panelSound"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#E3E2E2"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="373dp"
                android:layout_height="49dp"
                android:fontFamily="@font/mainfont_bold"
                android:text="@string/options"
                android:textAlignment="center"
                android:textColor="#1F87A6"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/swActiveSound"
                android:layout_width="247dp"
                android:layout_height="40dp"
                android:checked="true"
                android:showText="true"
                android:text="@string/sound"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="373dp"
                android:layout_height="49dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/mainfont_bold"
                android:text="@string/soudMode"
                android:textAlignment="center"
                android:textColor="#1F87A6"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swActiveSound" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="300dp"
                android:layout_height="39dp"
                android:showText="true"
                android:text="@string/typesound"
                android:textOff="@string/defaultsound"
                android:textOn="@string/customsound"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>