<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/capaContenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="242dp"
            android:layout_height="322dp"
            android:alpha="0.2"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo4pieces" />

        <TextView
            android:id="@+id/labelNewName"
            style="@style/Theme.4puzzleGame.SimpleText"
            android:layout_width="293dp"
            android:layout_height="73dp"
            android:layout_marginTop="32dp"
            android:text="@string/titleLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/errorName"
            style="@style/Theme.4puzzleGame.ErrorText"
            android:layout_width="245dp"
            android:layout_height="33dp"
            android:text="@string/nameError"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelNewName" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="Text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>