<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97DBFF"
    app:flow_verticalAlign="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="398dp"
            android:layout_height="77dp"
            android:fontFamily="@font/mainfont_bold"
            android:foregroundTint="#E32D2D"
            android:gravity="center_vertical|center"
            android:text="@string/onlineGame"
            android:textColor="#173D8D"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivTablero3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:background="#173D8D"
            app:layout_constraintBottom_toTopOf="@+id/btnGo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <ImageView
            android:id="@+id/ivTablero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/fondotablergame"
            app:layout_constraintBottom_toBottomOf="@+id/ivTablero3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/txtVLoading"
            android:layout_width="256dp"
            android:layout_height="244dp"
            android:layout_marginStart="161dp"
            android:layout_marginEnd="168dp"
            android:background="#9A97DBFF"
            android:fontFamily="@font/mainfont_bold"
            android:gravity="center_vertical|center"
            android:text="@string/loading"
            android:textColor="#173D8D"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivTablero3"
            app:layout_constraintEnd_toEndOf="@+id/ivTablero3"
            app:layout_constraintStart_toStartOf="@+id/ivTablero"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.497" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:enabled="false"
            android:text="@string/GO"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/flMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout4"
        app:layout_anchorGravity="center">

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>